<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="General">

		<EditTextPreference android:key="@string/pref_interval_key"
			android:title="Update Interval"
			android:summary="Number of seconds between widget updates (0 = no auto update)"
			android:defaultValue="60" android:inputType="number" />

		<Preference android:title="Donate"
			android:summary="Support the development of CurrentWidget"
			android:key="donate" />

		<PreferenceScreen android:key="prefViews"
			android:title="Views" android:summary="Select which data to display on the widget">

			<CheckBoxPreference android:key="@string/pref_view_0_key"
				android:title="Electric Current (mA)" 
				android:defaultValue="true"/>

			<CheckBoxPreference android:key="@string/pref_view_1_key"
				android:title="Battery Level (%)" 
				android:defaultValue="true"/>

			<CheckBoxPreference android:key="@string/pref_view_2_key"
				android:title="Voltage (V)" 
				android:defaultValue="true"/>
				
			<Preference android:title="Help"
				android:summary="Touch value on widget to switch views"
				android:key=""/>


		</PreferenceScreen>
		
		<ListPreference android:title="Widget Type"
				android:summary="Change widget appearance"
				android:defaultValue="0"
				android:key="@string/pref_widget_type_key"
				android:entries="@array/pref_widget_types"
				android:entryValues="@array/pref_widget_types_values"
			/>
			

		<PreferenceScreen android:key="customize" android:title="Customize"
					android:summary="Customize appearance">
			
			<Preference android:key="text_textColor" android:title="Text Color"
				android:summary="Change text color in ClearText type"/>
			
		</PreferenceScreen>
		
		<PreferenceScreen android:title="Notification"
				android:key="prefNotifications" 
				android:summary="Alert on high current values">
			
		    <CheckBoxPreference android:key="@string/pref_notification_enabled_key" 
		        	android:title="Enabled" 
		        	android:defaultValue="false"
		        	android:summaryOn="Show notification on high current values"
		        	android:summaryOff="Don't show notification on high current values"/>
		    
		    <PreferenceCategory android:title="Conditions">
		    
		        <EditTextPreference android:key="@string/pref_notification_threshold_key"
		            android:title="Threshold"
		            android:summary="Minimum current value to consider as 'high'"
		            android:inputType="number"
		            android:defaultValue="200"
		            />
		        
		    	<EditTextPreference android:key="@string/pref_notification_number_of_updates_key"
		    	    android:title="Consecutive High Values Required"
		    	    android:summary="Number of consecutive high current values required to trigger alert"
		    	    android:inputType="number"
		    	    android:defaultValue="3"/>
		    	
		       	<CheckBoxPreference android:key="@string/pref_notification_screen_off_key" 
		       	    	android:title="Only when screen is off"
		       	    	android:summaryOn="Alert only when screen is off"
		       	    	android:summaryOff="Alert whether screen is off or on"
		       	    	android:defaultValue="false"/>
		    
		    </PreferenceCategory>
		    
		    <PreferenceCategory android:title="Alerts">
		        
		        <RingtonePreference android:title="Sound"
		            	android:key="@string/pref_notification_sound_key"
		            	android:summary="Ring on notification"
		            	android:ringtoneType="all"
		            	android:showSilent="true"
		            	android:showDefault="true"
		            	android:defaultValue=""/>
		    	    
		    	<CheckBoxPreference android:title="Vibrate"
		    	    	android:key="@string/pref_notification_vibrate_key"
		    	    	android:summaryOn="Vibrate on notification"
		    	    	android:summaryOff="Don't Vibrate on notification"
		    	    	android:defaultValue="false"/>		    	
		    
 			    <CheckBoxPreference android:title="LED"
		    	    	android:key="@string/pref_notification_led_key"
		    	    	android:summaryOn="Flash LED light on notification"
		    	    	android:summaryOff="Don't Flash LED light on notification"
		    	    	android:defaultValue="false"/>
		    	
		    </PreferenceCategory>
			
		</PreferenceScreen>
		    

	</PreferenceCategory>

	<PreferenceCategory android:title="Log">
			

		<CheckBoxPreference android:key="@string/pref_log_enabled_key"
			android:title="Log file" android:defaultValue="false"
			android:summaryOn="Log values to file" android:summaryOff="Don't log values to file" />
			
		<PreferenceScreen android:title="Log Options"
				android:key="prefLogOptions" android:summary="Advanced Options">
				 
			<EditTextPreference android:key="@string/pref_log_filename_key"
				android:title="Log filename" android:summary="Where to save the log file"
				android:defaultValue="/sdcard/currentwidget.log" 
				android:dependency="log_enabled" />
	
			<CheckBoxPreference android:key="@string/pref_log_apps_key"
				android:title="Log Applications" android:dependency="log_enabled"
				android:defaultValue="false" android:summaryOn="Log running applications to logfile"
				android:summaryOff="Don't log running applications" />
				
			<CheckBoxPreference android:key="@string/pref_force_sleep_log"
				android:title="Force Log In Sleep Mode"
				android:defaultValue="false"
				android:summary="Force log when device is sleeping"/>

			<CheckBoxPreference android:key="@string/pref_no_log_in_charge"
				android:title="No Log in Charge"
				android:defaultValue="false"
				android:summary="Prevents logs when phone is connected to power"/>
	

		</PreferenceScreen>
	
	  	<PreferenceScreen android:key="prefAnalyze"
				android:title="Analyze Log" 
				android:summary="Get more data from your log">
				
				<Preference android:title="Top Processes"
					android:summary="List all processes ordered by their average current usage"
					android:key="analyze_top_processes" />
					
				<Preference android:title="Values Count"
					android:summary="List all current (mA) values ordered by the number of times they were logged"
					android:key="analyze_values_count"/>

				<Preference android:title="Help"
					android:summary="Description of analyze options"
					android:key="analyze_help" />
				
		
		</PreferenceScreen>

		<Preference android:title="View Log" android:summary="Open log file"
			android:key="view_log" />

		<Preference android:title="View Log as Graph"
			android:summary="Show logged values as graph" android:key="view_graph" />

		<Preference android:title="Clear Log" android:summary="Delete log file"
			android:key="clear_log" />			

	</PreferenceCategory>

	<PreferenceCategory android:title="Custom Operation">

		<CheckBoxPreference android:key="@string/pref_op_enabled_key"
			android:title="Operation on Value" android:defaultValue="false"
			android:summaryOn="Perform an arithmetic operation on current value before display"
			android:summaryOff="Display original value" />

		<ListPreference android:title="Operation Type"
			android:dependency="op_enabled" android:summary="Operation type"
			android:key="@string/pref_op_type_key" android:defaultValue="0"
			android:entries="@array/pref_op_types" android:entryValues="@array/pref_op_types_values" />

		<EditTextPreference android:key="@string/pref_op_value_key"
			android:title="Operation Value" android:summary="Operation value"
			android:defaultValue="1" android:dependency="op_enabled"
			android:inputType="numberDecimal|numberSigned" />

	</PreferenceCategory>



</PreferenceScreen>
